# Esd.Engine

./: CMakeLists.txt  README.md
Src/: Main.cpp
Src/Core/: Application.cpp  Application.h  Engine.cpp  Engine.h  EngineCore.cpp  EngineCore.h  PhysicsObject.cpp  PhysicsObject.h
Src/Event/: EventHandler.cpp  EventHandler.h
Src/Graphics/Renderer/: Renderer.cpp  Renderer.h
Src/Graphics/UI/: Styles.h  UI.cpp  UI.h
Src/Graphics/Window/: Window.cpp  Window.h
Src/Input/: EventHandler.cpp  EventHandler.h
Src/Simulations/: SimulationBase.h  SimulationsHandler.cpp  SimulationsHandler.h
Src/Simulations/EngineEditor/: Editor.h
Src/Simulations/TestSimulations/: BouncingCircle.h  Circle.h  Editor.h  Template.h  Verlet.h
Src/Simulations/VerletSimulation/: Verlet.h  VerletUtils.h
Src/Utils/: Settings.h  Utils.h
